# ScholarSeek

./: README.md  SUBMISSION.md  pyproject.toml  start_web.ps1
PasaDataSet/AutoScholarQuery/: dev.jsonl  test.jsonl
PasaDataSet/RealScholarQuery/: test.jsonl
PasaDataSet/benchmark/: spar_bench.jsonl
frontend/: app.js  index.html  styles.css
outputs/: paper_pdf_paths.txt
outputs/eval/: autoscholar_fast_probe_20.jsonl  autoscholar_local_openalex_20.jsonl  autoscholar_local_openalex_20_summary.json  autoscholar_local_openalex_top5_20.jsonl  autoscholar_local_openalex_top5_20_summary.json  autoscholar_local_probe_5.jsonl  autoscholar_local_probe_5_summary.json  autoscholar_local_qwen_probe_5.jsonl  autoscholar_local_qwen_probe_5_summary.json  debug_autoscholar_v8_5.jsonl  debug_autoscholar_v8_5_summary.json  debug_autoscholar_v9_5.jsonl  debug_autoscholar_v9_5_summary.json  formal_autoscholar_spar_qwen_v9.jsonl  reranker_test_results.json  spar_bench_default_20.jsonl  spar_bench_default_20_q5.jsonl  spar_bench_default_20_q5_summary.json  spar_bench_default_20_summary.json  sparbench_local_openalex_top10_20.jsonl  sparbench_local_openalex_top10_20_summary.json  sparbench_local_openalex_top20_20.jsonl  sparbench_local_openalex_top20_20_summary.json  sparbench_local_openalex_top5_20.jsonl  (+1 more)
scripts/: build_submission.ps1  generate_eval_figures.py  generate_project_document.py
tests/: test_config.py  test_http_retry.py  test_listwise_reranker.py  test_query_planner.py  test_qwen.py  test_ranker.py  test_reranker_dataset.py  test_retrievers.py  test_spar_pipeline.py
(+32 files in other folders)
